near-sdk/compilation_tests/bad_argument.stderr
error: Unsupported contract API type.
  --> compilation_tests/bad_argument.rs:30:59
   |
30 |     pub fn insert(&mut self, key: TypeA, value: TypeB, t: impl MyTrait) -> Option<TypeB> {
   |                                                           ^^^^^^^^^^^^
